Fixed approval process, layout issues, index, stylesheet.

--- a/timesheet.css
+++ b/timesheet.css
@@ -9,6 +9,7 @@ h1 {
 
 .bordered {
   border: 3px solid #f1f1f1;
+  margin-block-end: 1em;
 }
 
 .tg  {
@@ -70,11 +71,13 @@ h1 {
 }
 .input-time {
   width: 5em;
+  padding: 0px 0px;
+  margin: 0px 0px;
 }
 
 /* Full-width inputs */
 input[type=text], input[type=password] {
-/*  width: 100%;
+  /* width: 100%; 
   padding: 12px 20px;
   margin: 8px 0; */
   padding: 2px 2px;
@@ -82,6 +85,12 @@ input[type=text], input[type=password] {
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+
+.logininput {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
 }
 
 input[type=button], input[type=submit], input[type=reset] {
@@ -114,7 +123,7 @@ input[type=submit].menubar{
 #save {
   right: 400px;
 }
-#submit {
+#submit, #approve {
   right: 210px;
 }
 #logout {
@@ -127,9 +136,8 @@ input[type=button]:disabled, input[type=submit]:disabled, input[type=reset]:disa
 }
 
 /* Set a style for all buttons */
-/*
 button {
-  background-color: #04AA6D;
+  background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -137,7 +145,7 @@ button {
   cursor: pointer;
   width: 100%;
 }
-*/
+
 /* Add a hover effect for buttons */
 button:hover {
   opacity: 0.8;
